Fixed: admin menu overlaps search input.

--- a/sass/components/_admin_menu.scss
+++ b/sass/components/_admin_menu.scss
@@ -5,3 +5,7 @@
     font-size:0.7rem !important;
   }
 }
+
+.admin-menu .brand {
+  top: 90px; /* height admin menu + 3em */
+}
